# desktop-sdk

./: ROADMAP.md
ChromiumBasedEditors/lib/: CMakeLists.txt  ascdocumentscore.pri  helper_main.cpp
ChromiumBasedEditors/lib/include/: applicationmanager.h  applicationmanager_events.h  base.h  cefapplication.h  cefview.h  keyboardchecker.h  keychain.h  mac_application.h  mac_cefview.h  mac_cefviewmedia.h  nsascprinter.h  spellchecker.h
ChromiumBasedEditors/lib/qt_wrapper/: CMakeLists.txt  qtascdocumentscore.pro
ChromiumBasedEditors/lib/qt_wrapper/include/: qascapplicationmanager.h  qascprinter.h  qcefview.h  qcefview_media.h  qdpichecker.h  qexternalmessageloop.h
ChromiumBasedEditors/lib/qt_wrapper/qrenderer/include/: qprintercontext.h  qrenderer.h
ChromiumBasedEditors/lib/qt_wrapper/qrenderer/src/: qprintercontext.cpp  qrenderer.cpp
ChromiumBasedEditors/lib/qt_wrapper/qrenderer/test/: main.cpp
ChromiumBasedEditors/lib/qt_wrapper/src/: qascapplicationmanager.cpp  qascprinter.cpp  qcefview.cpp  qcefview_media.cpp  qdpichecker.cpp  qexternalmessageloop.cpp
ChromiumBasedEditors/lib/src/: Logger.h  applicationmanager.cpp  applicationmanager_p.h  cefapplication.cpp  ceffiledownloader.h  cefview.cpp  cloud_crypto.h  cookiesworker.h  cors_resource_hanler.h  crypto_mode.cpp  crypto_mode.h  fileconverter.h  filelocker.cpp  filelocker.h  fileprinter.cpp  fileprinter.h  keyboardchecker.cpp  keyboardlayout.cpp  keyboardlayout.h  keychain.cpp  mac_application.mm  mac_cefview.mm  mac_cefviewmedia.mm  mac_keyboardlayout.h  mac_keyboardlayout.mm  mailto.h  plugins.h  plugins_resources.h  providers.h  spellchecker.cpp  templatesmanager.h  utils.h  widget_impl.mm  window_handle.cpp  window_handle.h  window_handle.mm  x2t.h
ChromiumBasedEditors/lib/src/additional/: create.cpp  manager.h  renderer.h
ChromiumBasedEditors/lib/src/cefwrapper/: client_app.h  client_renderer.h  client_renderer_params.h  client_renderer_wrapper.cpp  client_resource_handler_async.cpp  client_resource_handler_async.h  client_scheme.h  client_scheme_wrapper.cpp  external_process.h  monitor_info.cpp  (+2 more)
ChromiumBasedEditors/lib/tools/: tools.cpp  tools.h
ChromiumBasedEditors/plugins/ai-agent/: .gitignore  CLAUDE.md  LIBRARY_MIGRATION_PLAN.md  REFACTORING.md  biome.json  changelog.md  index.html  onlyoffice-ai-chat-0.2.11.tgz  onlyoffice-ai-chat-0.3.1.tgz  onlyoffice-ai-chat-0.4.0.tgz  onlyoffice-ai-chat-0.4.1.tgz  onlyoffice-ai-chat-0.4.29.tgz  onlyoffice-ai-chat-0.4.3.tgz  package-lock.json  package.json  tsconfig.app.json  tsconfig.desktop.json  tsconfig.docs.json  tsconfig.json  vite.config.ts
ChromiumBasedEditors/plugins/audio/: code.js
ChromiumBasedEditors/plugins/manager/: code.js
ChromiumBasedEditors/plugins/sendto/: code.js
ChromiumBasedEditors/plugins/video/: code.js
ChromiumBasedEditors/videoplayerlib/: CMakeLists.txt  qascvideoview.h  qfooterpanel.h  qwidgetutils.h
ChromiumBasedEditors/videoplayerlib/src/: lib_base.cpp  lib_base.h  qascmediaplayer.h  qascvideoview.cpp  qascvideowidget.cpp  qascvideowidget.h  qfooterpanel.cpp  qfooterpanel_private.h  qiconpushbutton.cpp  qiconpushbutton.h  qmultimedia.h  qtimelabel.cpp  qtimelabel.h  qvideoplaylist.cpp  qvideoplaylist.h  qvideoslider.cpp  qvideoslider.h  qwidgetutils.cpp  videoplayerlib_export.h
HtmlFile/Internal/src/: client_app.h  client_renderer_wrapper.cpp  clienthandler.h  main.cpp
(+915 files in other folders)
